# ands-ai

agentic-portfolio/: BACKLOG.md  DECISIONS.md  (+2 more)
ai-secops-copilot/services/agent-runtime/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
ai-secops-copilot/services/agent-runtime/app/: __init__.py  analysis.py  analytics.py  auth.py  config.py  domain.py  governance.py  idempotency.py  llm.py  main.py  mcp_server.py  mcp_tools.py  metrics.py  notifications.py  pipeline.py  policy.py  prompts.py  ratelimit.py  remediation.py  scheduler.py  schemas.py  tenancy.py  ticketing.py
ai-secops-copilot/services/agent-runtime/app/gateway/: __init__.py  cache.py  cost.py  gateway.py  providers.py  router.py  types.py
ai-secops-copilot/services/agent-runtime/app/graph/: __init__.py  build.py  nodes.py  runner.py  state.py
ai-secops-copilot/services/agent-runtime/app/ingestion/: __init__.py  common.py  sarif.py  semgrep.py
ai-secops-copilot/services/agent-runtime/app/observability/: __init__.py  alerts.py  prometheus.py  timeseries.py  tracing.py
ai-secops-copilot/services/agent-runtime/app/persistence/: __init__.py  sqlite_store.py
ai-secops-copilot/services/agent-runtime/tests/: test_analysis.py  test_analytics.py  test_api.py  test_auth_tenancy.py  test_gateway.py  test_governance.py  test_graph.py  test_idempotency.py  test_ingestion.py  test_mcp_tools.py  test_notifications.py  test_observability.py  test_persistence.py  test_pipeline.py  test_policy.py  test_providers.py  test_rag.py  test_remediation.py  test_scheduler.py  test_ticketing.py
ands-forge-os/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ands-forge-os/.github/workflows/: ci.yml
ands-forge-os/docs/demo/: walkthrough.md
ands-forge-os/evals/: run_eval.py
ands-forge-os/evals/datasets/: visions-v1.json
ands-forge-os/scripts/: demo_live_fake.py  demo_live_gemini.py  demo_walkthrough.py
ands-forge-os/src/forge_kernel/: __init__.py  audit.py  blueprint.py  config.py  gates.py  model_policy.py  runner.py  scheduler.py  skillpack.py  state.py  supervisor.py
ands-forge-os/src/forge_kernel/agents/: __init__.py  base.py  registry.py  reviewer.py
ands-forge-os/src/forge_kernel/eval/: __init__.py  rubric.py
ands-forge-os/src/forge_kernel/gateway/: __init__.py  cache.py  cost.py  factory.py  gateway.py  providers.py  router.py  types.py
ands-forge-os/src/forge_kernel/observability/: __init__.py  tracing.py
ands-forge-os/src/forge_kernel/tools/: __init__.py  base.py  filesystem.py  mockup.py
ands-forge-os/src/forge_os/: __init__.py  api.py  cli.py  factory.py  judge.py  mcp_server.py  mcp_tools.py  prompts.py  structured.py
ands-forge-os/src/forge_os/agents/: __init__.py  llm_agent.py  seeds.py  tools.py
ands-forge-os/src/forge_os/program/: lifecycle.blueprint.yaml
ands-forge-os/src/forge_os/skillpacks/: ai-capability-mapper.yaml  api-spec.yaml  business-case.yaml  competitive-analysis.yaml  db-schema.yaml  discovery.yaml  mockup.yaml  prd-author.yaml  scaffolder.yaml  system-architect.yaml  user-flow.yaml  ux.yaml  vision-intake.yaml
ands-forge-os/tests/: conftest.py  test_api.py  test_blueprint.py  test_end_to_end.py  test_fake_live.py  test_gates_and_review.py  test_gateway.py  test_llm_agent.py  test_mcp_tools.py  test_model_tiers.py  test_scheduler.py
(+100 files in other folders)
