[project]
name = "ai-secops-agent-runtime"
version = "0.1.0"
description = "Python LangGraph agent runtime for the AI Security Operations Copilot (Finding Analysis Node -> Ticket Decision Node -> Governance Gate)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
# LLM providers and observability are wired on later days; kept optional so the
# walking skeleton stays light.
llm = [
    "openai>=1.40",
    "anthropic>=0.34",
    "langfuse>=2.0",
]
# Vector store / cache for the RAG layer (Day 5).
data = [
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "redis>=5.0",
]
# MCP server interface — drive the runtime from Cursor/VS Code/Antigravity/Claude Desktop.
mcp = [
    "mcp>=1.2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "httpx>=0.27",
]

[project.scripts]
agent-runtime-mcp = "app.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
